--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "particlesjs": "^2.2.3",
     "spotify-web-api-node": "^5.0.2"
   }
 }
